--- a/CachingExample/Views/Home/Index.cshtml
+++ b/CachingExample/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="jumbotron">
+﻿@model CachingExample.ViewModels.Home.IndexViewModel
+
+        <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
@@ -17,8 +19,7 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+        <h2>I need about @Model.FormattedCurrency</h2>
+        <p>Generated at @Model.FormattedTime</p>
     </div>
 </div>
