--- a/CachingExample/Views/Shared/_Layout.cshtml
+++ b/CachingExample/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Rarely Updated Timestamp", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Frequently Updated Timestamp", "Product", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Product 5", "ProductDetail", "Home", new { id = 5 }, null)</li>
+                    <li>@Html.ActionLink("Product 17", "ProductDetail", "Home", new { id = 17 }, null)</li>
+
                 </ul>
             </div>
         </div>
