Created a custom Caching profile based on language.

--- a/CachingExample/Views/Shared/_Layout.cshtml
+++ b/CachingExample/Views/Shared/_Layout.cshtml
@@ -20,10 +20,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Rarely Updated Timestamp", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Frequently Updated Timestamp", "Product", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Rarely Updated Timestamp", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Frequently Updated Timestamp", "Product", "Home")</li>
                     <li>@Html.ActionLink("Product 5", "ProductDetail", "Home", new { id = 5 }, null)</li>
                     <li>@Html.ActionLink("Product 17", "ProductDetail", "Home", new { id = 17 }, null)</li>
+                    <li>@Html.ActionLink("By Language", "ByLanguage", "Home")</li>
 
                 </ul>
             </div>
